# evm-indexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yaml
.github/workflows/: deploy-google.yaml  deploy.yaml  rust.yaml  test.yaml
api/: Cargo.toml  README.md  sample.env
api/src/: main.rs
api/src/routes/: contracts.rs  mod.rs  tokens.rs
data-store/: Cargo.toml
data-store/migrations/2023-10-07-160011_setup_store/: down.sql  up.sql
data-store/migrations/2024-01-25-101611_nft_owner_index/: down.sql  up.sql
data-store/migrations/2024-02-02-113916_contract_abi_not_null/: down.sql  up.sql
data-store/migrations/2024-02-21-162916_add_raw_to_nft_metadata/: down.sql  up.sql
data-store/migrations/2024-03-04-162319_nft_metadata_raw_not_null/: down.sql  up.sql
data-store/migrations/2024-03-14-140922_index_metadata_id/: down.sql  up.sql
data-store/src/: lib.rs  models.rs  schema.rs  store.rs  update_cache.rs
docker/: Dockerfile.binary  Dockerfile.migration  entrypoint.migration.sh
eth/: Cargo.toml
eth/src/: lib.rs  rpc.rs  types.rs
eth/src/abis/: ERC721Metadata.json
eth/src/rpc/: dune.rs  ethers.rs  ethrpc.rs  mod.rs
eth/src/types/: address.rs  bytes32.rs  message.rs  mod.rs  other.rs  u256.rs
event-handler/: .env.example  Cargo.toml  Dockerfile  example.toml
event-handler/migrations/2023-10-07-160011_setup_store/: down.sql  up.sql
event-handler/src/: cli.rs  config.rs  handler.rs  lib.rs  main.rs  models.rs  processor.rs  pubsub.rs  receipts.rs  schema.rs  store.rs  update_cache.rs
event-handler/src/handlers/: approval_for_all.rs  erc1155_transfer.rs  erc1155_uri.rs  erc721_approval.rs  erc721_transfer.rs  mod.rs
event-retriever/: Cargo.toml
event-retriever/src/: lib.rs  main.rs
event-retriever/src/db_reader/: diesel.rs  mod.rs  models.rs  schema.rs
event-retriever/src/db_reader/models/: conversions.rs  db.rs  mod.rs
kubernetes/: Makefile  README.md  values-mainnet.yaml
kubernetes/config/: pod.yaml  secrets.example.yaml
metadata-retriever/: .env.example  Cargo.toml  README.md
metadata-retriever/src/: app.rs  config.rs  main.rs
metadata-retriever/src/routes/: mod.rs
metadata-retriever/src/routes/contract/: abi.rs  mod.rs
metadata-retriever/src/routes/token/: mod.rs
metadata-retriever/src/routes/token/metadata/: alchemy.rs  data_url.rs  homebrew.rs  ipfs.rs  mod.rs  models.rs  util.rs
metadata-retriever/test_data/: invalid_json_#.txt  invalid_json_base64.txt  invalid_json_base64_2.txt  invalid_json_plain.txt  valid_json_base64.txt  valid_json_plain.txt  valid_json_utf8.txt  valid_svg_base64.txt  valid_svg_utf8.txt  valid_svg_utf8_2.txt  valid_text_plain.txt
shared/: Cargo.toml
shared/src/: eth.rs  lib.rs
test_db/: Dockerfile  Dockerfile.migration  README.md  restore.sql  source_schema.sql
