[package]
name = "api"
version = "0.1.0"
edition = "2021"


[dependencies]
data-store = { path = "../data-store" }
eth = { path = "../eth" }

actix = "0.13.1"
actix-web = "4.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
dotenvy = "0.15.7"
swagger = "6.4.1"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
env_logger = "0.10.1"
