[package]
name = "data-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bigdecimal = { version = "0.3.1", features = ["serde"] }
diesel = { version = "2.1.1", features = [
    "postgres",
    "numeric",
    "serde_json",
    "chrono",
] }
eth = { path = "../eth" }
event-retriever = { path = "../event-retriever" }
futures = "0.3.29"
tracing = "0.1.37"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros"] }
