[package]
name = "data-store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
# Must remain fixed at 0.3.1
bigdecimal = { version = "0.3.1", features = ["serde"] }
diesel = { version = "2.1.4", features = [
    "postgres",
    "numeric",
    "serde_json",
    "chrono",
    "r2d2",
] }
eth = { path = "../eth" }
event-retriever = { path = "../event-retriever" }
futures = "0.3.30"
tracing = "0.1.40"
scheduled-thread-pool = "0.2.7"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
md5 = { version = "0.7.0", features = [] }
