[package]
name = "eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ethers = "2.0.10"
bigdecimal = "0.3.1"
rustc-hex = "2.1.0"
diesel = { version = "2.1.1", features = ["postgres", "numeric", "chrono"] }
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["macros"] }
tracing = "0.1.37"
async-trait = "0.1.74"
# Waiting on https://github.com/nlordell/ethrpc-rs/pull/9
# ethrpc = { version = "0.0.8", features = ["http"] }
ethrpc = { git = "https://github.com/bh2smith/ethrpc-rs", rev = "04ba07064fcb9ac8cf71e02d2c168819499b3616", features = [
  "http",
] }
solabi = "0.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
duners = "0.0.2"
csv = "1.3.0"

[dev-dependencies]
maplit = "1.0.2"
tracing-test = "0.2.4"
