[package]
name = "event-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
data-store = { path = "../data-store" }
event-retriever = { path = "../event-retriever" }
eth = { path = "../eth" }
futures = "0.3.29"
tracing = "0.1.37"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
clap = { version = "4.4.16", features = ["derive", "env"] }
serde = { version = "1.0.195", features = ["derive"] }
url = "2.5.0"
toml = "0.8.8"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.108"
google-cloud-pubsub = "0.22.1"
google-cloud-googleapis = { version = "0.12.0", features = ["pubsub"] }

[dev-dependencies]
dotenv = "0.15.0"
tracing-test = "0.2.4"
