[package]
name = "event-retriever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
# This must remain fixed at 0.3.1
bigdecimal = { version = "0.3.1", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "numeric"] }
eth = { path = "../eth" }
tracing = "0.1.40"

[dev-dependencies]
maplit = "1.0.2"
dotenv = "0.15.0"
