[package]
name = "metadata-retriever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth = { path = "../eth" }
data-store = { path = "../data-store" }

actix-web = "4.5.1"
tracing-actix-web = "0.7.9"
anyhow = "1.0.80"
dotenv = "0.15.0"
google-cloud-pubsub = "0.23.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1.77"
reqwest = "0.11.24"
tracing = "0.1.40"
url = "2.5.0"
futures = "0.3.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = "1.36.0"
data-url = "0.3.1"
regex = "1.10.3"
cid = "0.11.1"
md5 = { version = "0.7.0", features = [] }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros"] }
tracing-test = "0.2.4"
flate2 = "1.0"
csv = "1.3"
rand = "0.8.5"
