[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.10"
bigdecimal = "0.3.1"
rustc-hex = "2.1.0"
diesel = { version = "2.1.1", features = ["postgres", "numeric"] }
